2004-09-12	blytkerchan	repair issue 1014458
	* hptr.c (smr_hptr_free_list_enq): new function
	(smr_hptr_free_list_deq): ditto
	(hptr_get_local_data): call smr_hptr_free_list_deq to try to get a
	node from the free list of nodes before allocating a new one
	(hptr_cleanup_local_data): enqueue the local data in the free list in
	stead of freeing it
	* hptr.h [hptr_local_data_t]: new field: flag
	* smr.c (smr_scan_worker): use realloc in stead of alloca to allocate
	plist
	check the flag field in hptr_data before using its next pointer
	* smr.h [smr_global_data_t]: new field: free

2004-08-11	blytkerchan
	* hptr.c (hptr_register_local_data): use compare_and_exchange_ptr in
	stead of obsolete compare_and_exchange
	(hptr_get_local_data): ditto
	(hptr_register): ditto
	(hptr_free): ditto

2004-07-22	blytkerchan
	* hptr.c: remove all void** casts for compare_and_exchange calls
	* module.mk: update
	* smr.c: include <string.h>, and arch-dependant headers
	cast parameters to atmoic_increment and atomic_decrement calls to
	uint32_t*

2004-07-20	blytkerchan
	* module.mk: new file

2004-05-07	blytkerchan
	* Makefile.am [libmemory_la_SOURCES]: add increment.c and decrement.c
	[TESTS]: new variable
	[noinst_PROGRAMS]: ditto
	[test1_LDADD]: ditto
	[test2_LDADD]: ditto
	[man_MANS]: ditto
	[EXTRA_DITS]: add manpages and sources
	<%.3>: new target
	* NEWS: add contents
	* README: update words on P variable and words on K variable
	add Further Documentation and Author sections
	* libmemory.3.sgml: correct spelling
	* test1.c (main): update use of smr_init
	* test2.c (main): ditto
	[N_THREADS]: lower to 10
	[BATCH_SIZE]: remove

2004-05-04	blytkerchan
	* hptr.c (hptr_get): new function
	* hptr.h (hptr_get): ditto

2004-05-03	blytkerchan	debug session
	* Makefile.am [AM_CFLAGS]: new variable
	* hptr.c (hptr_register_local_data): make it possible to register local data if none is registered yet..
	(hptr_get_local_data): use calloc for allocations
	(hptr_init): ditto